[package]
name = "hoc_bong"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "hoc_bong"
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
overflow-checks = true
